# Potion-Chats

./: .gitignore  README.md  app.py  fizzbuzz.txt  pyproject.toml
static/: rooms.css  script.js  styles.css  themes.css
templates/: base.html  index.html  room.html  rooms.html
